# vk-experiments

./: LICENSE  README.md
01 - Hello Triangle/src/shaders/: fragment.frag
01 - hello triangle/: README.md  makefile  notes.md
01 - hello triangle/shd/: main_fs.frag  main_vs.vert
01 - hello triangle/src/: main.cpp
01 - hello triangle/src/shaders/: main_vs.spv  vertex.spv
01a - Hello Triangle (abstracted)/: README.md  makefile
01a - Hello Triangle (abstracted)/src/: main.cpp
01a - Hello Triangle (abstracted)/src/rendering/: renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  vkcommands.cpp  vkcommands.h
01b - Hello Triangle (improved)/: README.md
01b - Hello Triangle (improved)/src/: main.cpp
01b - Hello Triangle (improved)/src/rendering/: pipeline.cpp  pipeline.h  renderpass.cpp  swapchain.cpp  (+3 more)
02 - Vulkan Framework/: CMakeLists.txt
02 - Vulkan Framework/src/: main.cpp
02a - Vulkan Framework (updated)/: CMakeLists.txt  patch_notes.md
02a - Vulkan Framework (updated)/res/shaders/: triangle.vert  triangle_vert.spv
02a - Vulkan Framework (updated)/src/: main.cpp
02a - Vulkan Framework (updated)/src/mesh/: mesh.cpp  mesh.h
02a - Vulkan Framework (updated)/src/renderer/: cmdbuffer.cpp  descriptor.cpp  pipeline.cpp  renderpass.cpp  renderpass.h  swapchain.cpp  swapchain.h  texture.cpp  vksetup.cpp
02a - Vulkan Framework (updated)/src/utils/: alloc.cpp  alloc.h  camera.cpp  camera.h  image_utils.cpp  image_utils.h  linalg.cpp  linalg.h  mesh.cpp
03 - Voxel Engine/: CMakeLists.txt  README.md
03 - Voxel Engine/src/: main.cpp  ref.h
(+57 files in other folders)
